<package>
  <name>rosdoc_lite</name>
  <version>0.2.2</version>
  <description>
    rosdoc_lite wraps documentation tools like doxygen, sphinx, and epydoc with ROS package semantics to auto-generate documentation for ROS packages. rosdoc_lite also supports online documentation, like the ROS wiki.
  </description>
  <author>Ken Conley</author>
  <author email="eitan@hidof.com">Eitan Marder-Eppstein</author>
  <maintainer email="dthomas@willowgarage.com">Dirk Thomas</maintainer>
  <license>BSD</license>
  <url>http://www.ros.org/wiki/rosdoc_lite</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>epydoc</run_depend>
  <run_depend>doxygen</run_depend>
  <run_depend>python-yaml</run_depend>
  <run_depend>python-sphinx</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>python-kitchen</run_depend>
  <run_depend>python-catkin-pkg</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
