<package>
  <name>rosdoc_lite</name>
  <version>0.2.4</version>
  <description>
    This ROS package wraps documentation tools like doxygen, sphinx,
    and epydoc, making it convenient to generate ROS package
    documentation.

    It also generates online documentation for the ROS wiki.
  </description>
  <author>Ken Conley</author>
  <author email="eitan@hidof.com">Eitan Marder-Eppstein</author>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rosdoc_lite</url>
  <url type="repository">https://github.com/ros-infrastructure/rosdoc_lite.git</url>
  <url type="bugtracker">https://github.com/ros-infrastructure/rosdoc_lite/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>doxygen</run_depend>
  <run_depend>epydoc</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>python-catkin-pkg</run_depend>
  <run_depend>python-kitchen</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>python-sphinx</run_depend>
  <run_depend>python-yaml</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
