<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosdoc_lite</name>
  <version>0.2.10</version>
  <description>
    This ROS package wraps documentation tools like doxygen, sphinx,
    and epydoc, making it convenient to generate ROS package
    documentation.

    It also generates online documentation for the ROS wiki.
  </description>
  <author>Ken Conley</author>
  <author email="eitan@hidof.com">Eitan Marder-Eppstein</author>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rosdoc_lite</url>
  <url type="repository">https://github.com/ros-infrastructure/rosdoc_lite.git</url>
  <url type="bugtracker">https://github.com/ros-infrastructure/rosdoc_lite/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>doxygen</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">epydoc</exec_depend>
  <exec_depend>genmsg</exec_depend>
  <exec_depend>graphviz</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-pkg-modules</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-pkg-modules</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-kitchen</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-kitchen</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg-modules</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg-modules</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-sphinx</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-sphinx</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
